--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     
-<script src="lec01.js">
+<!-- <script src="lec01.js"> -->
+<!-- <script src="lec02.js"> -->
+<script src="lec03.js">
 
 
 
